# dino-beast

./: Cargo.toml  README.md  main.rs
src/: lib.rs  main.rs
src/shader/: frag.spv
